--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 Code/.vs/Clinic Management System/v15/.suo
+Code/.vs/Clinic Management System/FileContentIndex/a57695d3-a539-4da5-a57e-ca699316c6f7.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/5f7c194c-170e-47f3-b3af-45f1ac77085e.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/eb2053e9-462d-41b2-b804-4c316979445d.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/5f7c194c-170e-47f3-b3af-45f1ac77085e.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/5f7c194c-170e-47f3-b3af-45f1ac77085e.vsidx
+/Code/.vs/Clinic Management System/FileContentIndex
