--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Code/.vs/Clinic Management System/v15/.suo
+Code/.vs/Clinic Management System/FileContentIndex/eb2053e9-462d-41b2-b804-4c316979445d.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/8c202494-30d8-4af8-8c36-038d614bcbc4.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/5f7c194c-170e-47f3-b3af-45f1ac77085e.vsidx
+Code/.vs/Clinic Management System/FileContentIndex/e7dbb0a9-7410-48a4-99b6-a9a4bd5620d6.vsidx
